temp/api-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-nodeport
  namespace: app
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 31000
  selector:
    app: api
