temp/frontend-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-nodeport
  namespace: app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
  selector:
    app: frontend
